Update and rename index.md to index.html

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@ layout: home
 author_profile: true
 ---
 
-## Introduce
+<h2>Introduce</h2>
 I am a second-year MS, Ph.D. student in electrical and computer engineering (ECE) at Seoul National University (SNU), advised by Prof. [Se Young Chun](https://icl.snu.ac.kr/pi).
 I earned my B.S degree in electrical and computer engineering (ECE) from Seoul National University (SNU).
 
-## Research
+<h2>Research</h2>
 <li>
 <div class="pub-row">
   <div class="col-sm-3 abbr" style="position: relative;padding-right: 15px;padding-left: 15px;">
