--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@ author_profile: true
 ---
 
 <h2>Introduce</h2>
-I am a second-year MS, Ph.D. student in electrical and computer engineering (ECE) at Seoul National University (SNU), advised by Prof. [Se Young Chun](https://icl.snu.ac.kr/pi).
+<h5>I am a second-year MS, Ph.D. student in electrical and computer engineering (ECE) at Seoul National University (SNU), advised by Prof. [Se Young Chun](https://icl.snu.ac.kr/pi).
 I earned my B.S degree in electrical and computer engineering (ECE) from Seoul National University (SNU).
+</h5>
 
 <h2>Research</h2>
 <li>
