--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@ author_profile: true
 ---
 
 <h2>Introduce</h2>
-<h5>I am a second-year MS, Ph.D. student in electrical and computer engineering (ECE) at Seoul National University (SNU), advised by Prof. [Se Young Chun](https://icl.snu.ac.kr/pi).
-I earned my B.S degree in electrical and computer engineering (ECE) from Seoul National University (SNU).
-</h5>
+<p style="font-size: 18px;">I am a second-year MS, Ph.D. student in electrical and computer engineering (ECE) at Seoul National University (SNU), advised by Prof. [Se Young Chun](https://icl.snu.ac.kr/pi).
+I earned my B.S degree in electrical and computer engineering (ECE) from Seoul National University (SNU).</p>
 
 <h2>Research</h2>
 <li>
