--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
 <h2>Selected Publications</h2>
 <h6>2023</h6>
 <ul>
-  <li>Neural Diffeomorphic Non-uniform B-spline Flows
-  sdlfsdfsdfsd
-  <br>
-  dfdfdfdf
+  <li>Efficient Unified Demosaicing for Bayer and Non-Bayer Patterned Image Sensors
+  Haechang Lee*, Dongwon Park*, <b>Wongi Jeong*</b>, Kijeong Kim, Hyunwoo Je, Dongil Ryu, and <b>Se Young Chun</b>
   </li>
 </ul>
 * #### **Neural Diffeomorphic Non-uniform B-spline Flows**  
