--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@ author_profile: true
 I earned my B.S degree in electrical and computer engineering (ECE) from Seoul National University (SNU).</p>
 
 
-<h2>Selected Publications</h2>
+<h2>Researchs</h2>
 <h6>2023</h6>
 <ul>
-  <li>Efficient Unified Demosaicing for Bayer and Non-Bayer Patterned Image Sensors
-  Haechang Lee*, Dongwon Park*, <b>Wongi Jeong*</b>, Kijeong Kim, Hyunwoo Je, Dongil Ryu, and <b>Se Young Chun</b>
+  <li>
+    <p style="font-size: 18px;"><b>Efficient Unified Demosaicing for Bayer and Non-Bayer Patterned Image Sensors</b></p>
+    <br>
+    <p style="font-size: 18px;">Haechang Lee*, Dongwon Park*, <b>Wongi Jeong*</b>, Kijeong Kim, Hyunwoo Je, Dongil Ryu, and <b>Se Young Chun</b></p>    
   </li>
 </ul>
 * #### **Neural Diffeomorphic Non-uniform B-spline Flows**  
