--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
 <h6>2023</h6>
 <ul>
   <li>
-    <p style="font-size: 18px;"><b>Efficient Unified Demosaicing for Bayer and Non-Bayer Patterned Image Sensors</b></p>
-    <br>
+    <p style="font-size: 22px;"><b>Efficient Unified Demosaicing for Bayer and Non-Bayer Patterned Image Sensors [ICCV23]</b></p>
     <p style="font-size: 18px;">Haechang Lee*, Dongwon Park*, <b>Wongi Jeong*</b>, Kijeong Kim, Hyunwoo Je, Dongil Ryu, and <b>Se Young Chun</b></p>    
   </li>
 </ul>
