--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
 <h6>2023</h6>
 <ul>
   <li>
-    <p style="font-size: 22px;"><b>Efficient Unified Demosaicing for Bayer and Non-Bayer Patterned Image Sensors [ICCV23]</b></p>
-    <p style="font-size: 18px;">Haechang Lee*, Dongwon Park*, <b>Wongi Jeong*</b>, Kijeong Kim, Hyunwoo Je, Dongil Ryu, and <b>Se Young Chun</b></p>    
+    <p style="font-size: 22px;">
+      Efficient Unified Demosaicing for Bayer and Non-Bayer Patterned Image Sensors<b>[ICCV23]</b>
+    </p>
+    <p style="font-size: 18px;">
+      Haechang Lee*, Dongwon Park*, <b>Wongi Jeong*</b>, Kijeong Kim, Hyunwoo Je, Dongil Ryu, and <b>Se Young Chun</b>
+      <br>
+      [[Paper](https://arxiv.org/pdf/2307.10667.pdf)] [<a href="ignoww.github.io/KLAP">project</a>]
+    </p>    
   </li>
 </ul>
 * #### **Neural Diffeomorphic Non-uniform B-spline Flows**  
