--- a/index.html
+++ b/index.html
@@ -18,17 +18,8 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
     <p style="font-size: 18px;">
       Haechang Lee*, Dongwon Park*, <b>Wongi Jeong*</b>, Kijeong Kim, Hyunwoo Je, Dongil Ryu, and <b>Se Young Chun</b>
       <br>
-      [[Paper](https://arxiv.org/pdf/2307.10667.pdf)] [<a href="ignoww.github.io/KLAP">project</a>]
+      [<a href="https://arxiv.org/pdf/2307.10667.pdf">paper</a>] [<a href="ignoww.github.io/KLAP">project</a>]
     </p>    
   </li>
 </ul>
-* #### **Neural Diffeomorphic Non-uniform B-spline Flows**  
-**Seongmin Hong**,  Se Young Chun  
-Thirty-Seventh AAAI Conference on Artificial Intelligence (**AAAI**), 2023.  
-[[Paper](https://ojs.aaai.org/index.php/AAAI/article/view/26441)][[arXiv](https://arxiv.org/abs/2304.04555)] [[project](/nubsf.html)] [<a href="https://github.com/smhongok/Non-uniform-B-spline-Flow">github</a>] [<a href="/bibtex.html#hong23neural">bibTeX</a>]
-
-* #### **Advanced direction of arrival estimation using step-learnt iterative soft-thresholding for frequency-modulated continuous wave multiple-input multiple-output radar**   
-**Seongmin Hong**, Seong-Cheol Kim, Seongwook Lee  
-IET Radar, Sonar & Navigation, 2023.  
-[[Paper](https://doi.org/10.1049/rsn2.12319)] [<a href="/bibtex.html#hong23advanced">bibTeX</a>]
 
