--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
     <p style="font-size: 18px;">
       Haechang Lee*, Dongwon Park*, <b>Wongi Jeong*</b>, Kijeong Kim, Hyunwoo Je, Dongil Ryu, and <b>Se Young Chun</b>
       <br>
-      [<a href="https://arxiv.org/pdf/2307.10667.pdf">paper</a>] [<a href="ignoww.github.io/KLAP/index.html">project</a>]
+      [<a href="https://arxiv.org/pdf/2307.10667.pdf">paper</a>] [<a href="https://ignoww.github.io/KLAP">project</a>]
     </p>    
   </li>
 </ul>
