--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
       Efficient Unified Demosaicing for Bayer and Non-Bayer Patterned Image Sensors <b>[ICCV23]</b>
     </p>
     <p style="font-size: 18px;">
-      Haechang Lee*, Dongwon Park*, <b>Wongi Jeong*</b>, Kijeong Kim, Hyunwoo Je, Dongil Ryu, and <b>Se Young Chun</b>
+      Haechang Lee*, Dongwon Park*, <b>Wongi Jeong*</b>, Kijeong Kim, Hyunwoo Je, Dongil Ryu, and <b>Se Young Chun</b>(*co-first)
       <br>
       [<a href="https://arxiv.org/pdf/2307.10667.pdf">paper</a>] [<a href="https://ignoww.github.io/KLAP">project</a>]
     </p>    
