--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ author_profile: true
 I earned my B.S degree in electrical and computer engineering (ECE) from Seoul National University (SNU).</p>
 
 
-<h2>Researchs</h2>
+<h2>Researches</h2>
 <h6>2023</h6>
 <ul>
   <li>
