--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ author_profile: true
 ---
 
 <h2>Introduce</h2>
-<p style="font-size: 18px;">I am a second-year MS, Ph.D. student in electrical and computer engineering (ECE) at Seoul National University (SNU), advised by Prof. <a href="https://icl.snu.ac.kr/pi">Se Young Chunr</a>.
+<p style="font-size: 18px;">I am a second-year MS, Ph.D student in electrical and computer engineering (ECE) at Seoul National University (SNU), advised by Prof. <a href="https://icl.snu.ac.kr/pi">Se Young Chun</a>.
 I earned my B.S degree in electrical and computer engineering (ECE) from Seoul National University (SNU).</p>
 
 
