--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
 
 
 <h2>Researches</h2>
-<h6>2023</h6>
+<p style="font-size: 20px;">
+  2023
+</p>
 <ul>
   <li>
     <p style="font-size: 20px;">
