--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@ author_profile: true
 ---
 
 <h2>Introduce</h2>
-<p style="font-size: 18px;">I am a second-year MS/Ph.D student in electrical and computer engineering (ECE) at Seoul National University (SNU), advised by Prof. <a href="https://icl.snu.ac.kr/pi">Se Young Chun</a>.
-I earned my B.S degree in electrical and computer engineering (ECE) from Seoul National University (SNU).</p>
+<p style="font-size: 18px;">
+I am a second-year MS/Ph.D student in electrical and computer engineering (ECE) at Seoul National University (SNU), advised by Prof. <a href="https://icl.snu.ac.kr/pi">Se Young Chun</a>.
+I earned my B.S degree in electrical and computer engineering (ECE) from Seoul National University (SNU).
+</p>
 
+<h2>Research Interests</h2>
+<p style="font-size: 18px;">
+My research interests lie broadly in the field of computer vision (CV), deep learning (DL). Specifically, my work explores the following areas:
+<ul>
+  <li> Computational Imaging </li>
+  <li> Efficient AI </li>
+  <li> Neural Network Quantization </li>
+</ul>
+but not limited to.
+</p>
 
 <h2>Researches</h2>
 <p style="font-size: 20px;">
