--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
 <h2>Research Interests</h2>
 <p style="font-size: 18px;">My research interests lie broadly in the field of computer vision (CV), deep learning (DL). Specifically, my work explores the following areas:</p>
 <ul>
-  <li><p style="font-size: 18px;"> Computational Imaging </p><br>
-  <p style="font-size: 18px;"> Efficient AI </p><br>
-  <p style="font-size: 18px;"> Neural Network Quantization </p></li>
+  <li><p style="font-size: 18px;"> Computational Imaging </p></li>
+  <li>Efficient AI</li>
+  <li>Neural Network Quantization</li>
 </ul>
 <p style="font-size: 18px;">but not limited to.</p>
 
