--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
   <li>
     <p style="font-size: 20px;">
       Efficient Unified Demosaicing for Bayer and Non-Bayer Patterned Image Sensors <b>[ICCV23]</b>
-      [<a href="https://arxiv.org/pdf/2307.10667.pdf">paper</a>] [<a href="https://arxiv.org/abs/2307.10667">arXiv</a>] [<a href="https://ignoww.github.io/KLAP">project</a>]
+      [<a href="https://arxiv.org/pdf/2307.10667.pdf">paper</a>] [<a href="https://arxiv.org/abs/2307.10667">arXiv</a>] [<a href="https://ignoww.github.io/KLAP_project">project</a>]
     </p>
     <p style="font-size: 18px;">
       Haechang Lee*, Dongwon Park*, <b>Wongi Jeong*</b>, Kijeong Kim, Hyunwoo Je, Dongil Ryu, and <b>Se Young Chun</b> (*co-first)
