--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
 </p>
 
 <h2>Research Interests</h2>
-<p style="font-size: 16px;">My research interests lie broadly in the field of computer vision (CV), deep learning (DL) and Model Compressing. Specifically, my work explores the following areas:</p>
+<p style="font-size: 16px;">My research interests lie broadly in the field of computer vision (CV), deep learning (DL) and model compressing. Specifically, my work explores the following areas:</p>
 <ul>
   <li><p style="font-size: 16px;">Computational Imaging</p></li>
   <li><p style="font-size: 16px;">Efficient AI</p></li>
