--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
 <ul>
   <li>
     <p style="font-size: 16px;">
-      Efficient Unified Demosaicing for Bayer and Non-Bayer Patterned Image Sensors <b>[ICCV23]</b>
+      <b>[ICCV23]</b>Efficient Unified Demosaicing for Bayer and Non-Bayer Patterned Image Sensors
       [<a href="https://arxiv.org/pdf/2307.10667.pdf">paper</a>] [<a href="https://arxiv.org/abs/2307.10667">arXiv</a>] [<a href="https://ignoww.github.io/KLAP_project">project</a>] [<a href="https://github.com/ignoww/KLAP">code</a>]
     </p>
     <p style="font-size: 16px;">
