--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
   2023
 </p>
 <ul>
+    <li>
+    <p style="font-size: 16px;">
+      <b>[ICCVW23](Oral)</b> Fully Quantized Always-on Face Detector Considering Mobile Image Sensors
+    </p>
+    <p style="font-size: 16px;">
+      Haechang Lee*, <b>Wongi Jeong*</b>, Dongil Ryu*, Hyunwoo Je, Albert No, Kijeong Kim**, and <b>Se Young Chun**</b> (*co-first, **co-corresponding)
+    </p>    
+  </li>
   <li>
     <p style="font-size: 16px;">
       <b>[ICCV23]</b> Efficient Unified Demosaicing for Bayer and Non-Bayer Patterned Image Sensors
