--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
 <ul>
     <li>
     <p style="font-size: 16px;">
-      <b>[ICCVW23](Oral)</b> Fully Quantized Always-on Face Detector Considering Mobile Image Sensors
+      <b>[ICCVW23] (Oral)</b> Fully Quantized Always-on Face Detector Considering Mobile Image Sensors
     </p>
     <p style="font-size: 16px;">
-      Haechang Lee*, <b>Wongi Jeong*</b>, Dongil Ryu*, Hyunwoo Je, Albert No, Kijeong Kim**, and <b>Se Young Chun**</b> (*co-first, **co-corresponding)
+      Haechang Lee*, <b>Wongi Jeong*</b>, Dongil Ryu*, Hyunwoo Je, Albert No, Kijeong Kim**, <b>Se Young Chun**</b> (*co-first, **co-corresponding)
     </p>    
   </li>
   <li>
@@ -38,7 +38,7 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
       [<a href="https://arxiv.org/pdf/2307.10667.pdf">paper</a>] [<a href="https://arxiv.org/abs/2307.10667">arXiv</a>] [<a href="https://ignoww.github.io/KLAP_project">project</a>] [<a href="https://github.com/ignoww/KLAP">code</a>]
     </p>
     <p style="font-size: 16px;">
-      Haechang Lee*, Dongwon Park*, <b>Wongi Jeong*</b>, Kijeong Kim, Hyunwoo Je, Dongil Ryu, and <b>Se Young Chun</b> (*co-first)
+      Haechang Lee*, Dongwon Park*, <b>Wongi Jeong*</b>, Kijeong Kim, Hyunwoo Je, Dongil Ryu, <b>Se Young Chun</b> (*co-first)
     </p>    
   </li>
 </ul>
