--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
   <li>
     <p style="font-size: 16px;">
       <b>[ICCV23]</b> Efficient Unified Demosaicing for Bayer and Non-Bayer Patterned Image Sensors
-      [<a href="https://arxiv.org/pdf/2307.10667.pdf">paper</a>] [<a href="https://arxiv.org/abs/2307.10667">arXiv</a>] [<a href="https://ignoww.github.io/KLAP_project">project</a>] [<a href="https://github.com/ignoww/KLAP">code</a>]
+      [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>] [<a href="https://arxiv.org/abs/2307.10667">arXiv</a>] [<a href="https://ignoww.github.io/KLAP_project">project</a>] [<a href="https://github.com/ignoww/KLAP">code</a>]
     </p>
     <p style="font-size: 16px;">
       Haechang Lee*, Dongwon Park*, <b>Wongi Jeong*</b>, Kijeong Kim, Hyunwoo Je, Dongil Ryu, <b>Se Young Chun</b> (*co-first)
