--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
     </p>
     <p style="font-size: 16px;">
       Haechang Lee*, <b>Wongi Jeong*</b>, Dongil Ryu*, Hyunwoo Je, Albert No, Kijeong Kim**, <b>Se Young Chun**</b> (*co-first, **co-corresponding)
+      [<a href="https://arxiv.org/abs/2311.01001">arXiv</a>]
     </p>    
   </li>
   <li>
