--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ author_profile: true
 
 <h2>Introduce</h2>
 <p style="font-size: 16px;">
-I am a second-year MS/Ph.D student in electrical and computer engineering (ECE) at Seoul National University (SNU), advised by Prof. <a href="https://icl.snu.ac.kr/pi">Se Young Chun</a>.
+I am a third-year MS/Ph.D student in electrical and computer engineering (ECE) at Seoul National University (SNU), advised by Prof. <a href="https://icl.snu.ac.kr/pi">Se Young Chun</a>.
 I earned my B.S degree in electrical and computer engineering (ECE) from Seoul National University (SNU).
 </p>
 
@@ -13,8 +13,8 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
 <p style="font-size: 16px;">My research interests lie broadly in the field of computer vision (CV), deep learning (DL) and model compressing. Specifically, my work explores the following areas:</p>
 <ul>
   <li><p style="font-size: 16px;">Efficient AI</p></li>
-  <li><p style="font-size: 16px;">Quantization (especially, post-training quantization)</p></li>
-  <li><p style="font-size: 16px;">Large model compression (large language model, generative model)</p></li>
+  <li><p style="font-size: 16px;">Model Compression</p></li>
+  <li><p style="font-size: 16px;">Quantization</p></li>
 </ul>
 <p style="font-size: 16px;">but not limited to.</p>
 
@@ -26,7 +26,7 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
 <ul>
     <li>
     <p style="font-size: 16px;">
-      <b>[ICCVW23] (Oral)</b> Fully Quantized Always-on Face Detector Considering Mobile Image Sensors
+      <b>[ICCVW23] (Oral presentation)</b> Fully Quantized Always-on Face Detector Considering Mobile Image Sensors
       [<a href="https://arxiv.org/abs/2311.01001">arXiv</a>]
     </p>
     <p style="font-size: 16px;">
