--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
 
 <h2>Research Interests</h2>
 <p style="font-size: 16px;">My research interests lie broadly in the field of computer vision (CV), deep learning (DL) and model compressing. Specifically, my work explores the following areas:</p>
-<ul style="margin: 0; padding: 0;"> <!-- 불필요한 여백 제거 -->
-  <li><p style="font-size: 16px; margin: 4px 0;">Efficient AI</p></li>
-  <li><p style="font-size: 16px; margin: 4px 0;">Model Compression</p></li>
-  <li><p style="font-size: 16px; margin: 4px 0;">Quantization</p></li>
+  <li><p style="font-size: 16px; margin: 0;">Efficient AI</p></li>
+  <li><p style="font-size: 16px; margin: 0;">Model Compression</p></li>
+  <li><p style="font-size: 16px; margin: 0;">Quantization</p></li>
 </ul>
 <p style="font-size: 16px;">but not limited to.</p>
 
