--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
 
 <h2>Research Interests</h2>
 <p style="font-size: 16px;">My research interests lie broadly in the field of computer vision (CV), deep learning (DL) and model compressing. Specifically, my work explores the following areas:</p>
-<ul style="margin: 0; padding: 0; font-size: 14px; line-height: 1.5;">
+<ul style="margin: 0; font-size: 16px; line-height: 1.5;">
   <li>Efficient AI</li>
   <li>Model Compression</li>
   <li>Quantization</li>
