--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
 
 <h2>Researches</h2>
 <p style="font-size: 15px;">
-  2023
+  <b>2023</b>
 </p>
 <ul>
     <li>
     <p style="font-size: 13px;">
-      <b>[ICCVW23] (Oral presentation)</b> Fully Quantized Always-on Face Detector Considering Mobile Image Sensors
+      <b>[ICCVW23] (Oral)</b> Fully Quantized Always-on Face Detector Considering Mobile Image Sensors
       [<a href="https://arxiv.org/abs/2311.01001">arXiv</a>]
     </p>
     <p style="font-size: 13px;">
