--- a/index.html
+++ b/index.html
@@ -19,27 +19,41 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
 <p style="font-size: 13px;">but not limited to.</p>
 
 <h2>Researches</h2>
-<p style="font-size: 15px;">
+<div style="font-size: 15px;">
   <b>2023</b>
-</p>
-<ul>
-    <li>
+</div>
+
+<div style="display: flex; align-items: center; margin-bottom: 20px;">
+  <!-- image -->
+  <div style="flex: 0 0 25%; padding: 10px;">
+    <img src="path_to_image/ICCVW23.jpg" alt="ICCVW23 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
+  </div>
+  <!-- text -->
+  <div style="flex: 1; padding: 10px;">
     <p style="font-size: 13px;">
       <b>[ICCVW23] (Oral)</b> Fully Quantized Always-on Face Detector Considering Mobile Image Sensors
       [<a href="https://arxiv.org/abs/2311.01001">arXiv</a>]
     </p>
     <p style="font-size: 13px;">
       Haechang Lee*, <b>Wongi Jeong*</b>, Dongil Ryu*, Hyunwoo Je, Albert No, Kijeong Kim**, <b>Se Young Chun**</b> (*co-first, **co-corresponding)
-    </p>    
-  </li>
-  <li>
+    </p>
+  </div>
+</div>
+
+<div style="display: flex; align-items: center; margin-bottom: 20px;">
+  <div style="flex: 0 0 25%; padding: 10px;">
+    <img src="path_to_image/ICCV23.jpg" alt="ICCV23 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
+  </div>
+  <div style="flex: 1; padding: 10px;">
     <p style="font-size: 13px;">
       <b>[ICCV23]</b> Efficient Unified Demosaicing for Bayer and Non-Bayer Patterned Image Sensors
-      [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>] [<a href="https://arxiv.org/abs/2307.10667">arXiv</a>] [<a href="https://ignoww.github.io/KLAP_project">project</a>] [<a href="https://github.com/ignoww/KLAP">code</a>]
+      [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>] 
+      [<a href="https://arxiv.org/abs/2307.10667">arXiv</a>] 
+      [<a href="https://ignoww.github.io/KLAP_project">project</a>] 
+      [<a href="https://github.com/ignoww/KLAP">code</a>]
     </p>
     <p style="font-size: 13px;">
       Haechang Lee*, Dongwon Park*, <b>Wongi Jeong*</b>, Kijeong Kim, Hyunwoo Je, Dongil Ryu, <b>Se Young Chun</b> (*co-first)
-    </p>    
-  </li>
-</ul>
-
+    </p>
+  </div>
+</div>
