--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
 
 <div style="display: flex; align-items: center; margin-bottom: 20px;">
   <div style="flex: 0 0 25%; padding: 10px;">
-    <img src="path_to_image/ICCV23.jpg" alt="ICCV23 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
+    <img src="assets/KLAP.png" alt="ICCV23 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
   </div>
   <div style="flex: 1; padding: 10px;">
     <p style="font-size: 13px;">
