--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
 <div style="display: flex; align-items: center; margin-bottom: 20px;">
   <!-- image -->
   <div style="flex: 0 0 25%; padding: 10px;">
-    <img src="path_to_image/ICCVW23.jpg" alt="ICCVW23 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
+    <img src="assets/QFD.png" alt="ICCVW23 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
   </div>
   <!-- text -->
   <div style="flex: 1; padding: 10px;">
