--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
       [<a href="https://arxiv.org/abs/2311.01001">arXiv</a>]
     </p>
     <p style="font-size: 13px;">
-      Haechang Lee*, <b>Wongi Jeong*</b>, Dongil Ryu*, Hyunwoo Je, Albert No, Kijeong Kim**, <b>Se Young Chun**</b> (*co-first, **co-corresponding)
+      Haechang Lee*, <b style="color: blue;">Wongi Jeong*</b>, Dongil Ryu*, Hyunwoo Je, Albert No, Kijeong Kim**, Se Young Chun** (*co-first, **co-corresponding)
     </p>
   </div>
 </div>
@@ -53,7 +53,7 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
       [<a href="https://github.com/ignoww/KLAP">code</a>]
     </p>
     <p style="font-size: 13px;">
-      Haechang Lee*, Dongwon Park*, <b>Wongi Jeong*</b>, Kijeong Kim, Hyunwoo Je, Dongil Ryu, <b>Se Young Chun</b> (*co-first)
+      Haechang Lee*, Dongwon Park*, <b style="color: blue;">Wongi Jeong*</b>, Kijeong Kim, Hyunwoo Je, Dongil Ryu, Se Young Chun (*co-first)
     </p>
   </div>
 </div>
