--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
 </p>
 
 <h2>Research Interests</h2>
-<p style="font-size: 13px;">My research interests lie broadly in the field of computer vision (CV), deep learning (DL) and model compressing. Specifically, my work explores the following areas:</p>
+<p style="font-size: 13px;">My research interests broadly lie in <b>"efficient"</b> AI. I focus on making AI resource-efficient, computation-efficient, and model size-efficient in all aspects. Specifically, my work explores the following areas:</p>
 <ul style="margin: 0; font-size: 13px; line-height: 1.5;">
   <li>Efficient AI</li>
   <li>Model Compression</li>
-  <li>Quantization</li>
+  <li>Quantization & Pruning</li>
 </ul>
 <p style="font-size: 13px;">but not limited to.</p>
 
