--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
 
 <h2>Research Interests</h2>
 <p style="font-size: 13px;">My research interests broadly lie in <b>"efficient"</b> AI. I focus on making AI resource-efficient, computation-efficient, and model size-efficient in all aspects.
-  I am interested in both Natural Language Processing (NLP) and Computer Vision (CV), but my current focus is on CV tasks. Specifically, my work explores the following areas:</p>
+  I am interested in both Natural Language Processing (NLP) and Computer Vision (CV), but my current focus is on <b>CV</b> tasks. Specifically, my work explores the following areas:</p>
 <ul style="margin: 0; font-size: 13px; line-height: 1.5;">
   <li>Efficient AI</li>
   <li>Model Compression</li>
