--- a/index.html
+++ b/index.html
@@ -21,6 +21,59 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
 
 <h2>Researches</h2>
 <div style="font-size: 15px;">
+  <b>2025</b>
+</div>
+<div style="display: flex; align-items: center; margin-bottom: 20px;">
+  <div style="flex: 0 0 25%; padding: 10px;">
+    <img src="assets/Skrr.png" alt="ICML25 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
+  </div>
+  <div style="flex: 1; padding: 10px;">
+    <p style="font-size: 13px;">
+      <b>[ICML25 submitted]</b> Skrr: Skip and Re-use Text Encoder Layers for Memory Efficient Text-to-Image Generation
+<!--       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>]  -->
+      [<a href="https://arxiv.org/abs/2502.08690">arXiv</a>] 
+<!--       [<a href="https://ignoww.github.io/KLAP_project">project</a>]  -->
+<!--       [<a href="https://github.com/ignoww/KLAP">code</a>] -->
+    </p>
+    <p style="font-size: 13px;">
+      Hoigi Seo*, <b style="color: blue;">Wongi Jeong*</b>, Jae-sun Seo, Se Young Chun (*co-first)
+    </p>
+  </div>
+</div>
+
+<div style="display: flex; align-items: center; margin-bottom: 20px;">
+  <div style="flex: 0 0 25%; padding: 10px;">
+    <img src="assets/ZOODiP.png" alt="CVPR25 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
+  </div>
+  <div style="flex: 1; padding: 10px;">
+    <p style="font-size: 13px;">
+      <b>[CVPR25]</b> Efficient Personalization of Quantized Diffusion Model without Backpropagation
+<!--       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>]  -->
+<!--       [<a href="https://arxiv.org/abs/2307.10667">arXiv</a>]  -->
+<!--       [<a href="https://ignoww.github.io/KLAP_project">project</a>]  -->
+<!--       [<a href="https://github.com/ignoww/KLAP">code</a>] -->
+    </p>
+    <p style="font-size: 13px;">
+      Hoigi Seo*, <b style="color: blue;">Wongi Jeong*</b>, Kyungryeol Lee, Se Young Chun (*co-first)
+    </p>
+  </div>
+</div>
+
+<div style="display: flex; align-items: center; margin-bottom: 20px;">
+  <div style="flex: 0 0 25%; padding: 10px;">
+    <img src="assets/ISMRM25.png" alt="ISMRM25 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
+  </div>
+  <div style="flex: 1; padding: 10px;">
+    <p style="font-size: 13px;">
+      <b>[ISMRM25 (Oral)]</b> Harmonization for a black-box deep learning model
+    </p>
+    <p style="font-size: 13px;">
+      Minjun Kim, Hwihun Jeong, Hoigi Seo, <b style="color: blue;">Wongi Jeong</b>, Juhyung Park, Se Young Chun, Jongho Lee
+    </p>
+  </div>
+</div>
+
+<div style="font-size: 15px;">
   <b>2023</b>
 </div>
 
