--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
   </div>
   <div style="flex: 1; padding: 10px;">
     <p style="font-size: 13px;">
-      <b>[ISMRM25 (Oral)]</b> Harmonization for a black-box deep learning model
+      <b>[ISMRM25] (Oral)</b> Harmonization for a black-box deep learning model
     </p>
     <p style="font-size: 13px;">
       Minjun Kim, Hwihun Jeong, Hoigi Seo, <b style="color: blue;">Wongi Jeong</b>, Juhyung Park, Se Young Chun, Jongho Lee
