--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
   </div>
   <div style="flex: 1; padding: 10px;">
     <p style="font-size: 13px;">
-      <b>[ICML25 under-review]</b> Skrr: Skip and Re-use Text Encoder Layers for Memory Efficient Text-to-Image Generation
+      <b>[under-review]</b> Skrr: Skip and Re-use Text Encoder Layers for Memory Efficient Text-to-Image Generation
 <!--       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>]  -->
       [<a href="https://arxiv.org/abs/2502.08690">arXiv</a>] 
 <!--       [<a href="https://ignoww.github.io/KLAP_project">project</a>]  -->
