--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
 <!--       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>]  -->
 <!--       [<a href="https://arxiv.org/abs/2307.10667">arXiv</a>]  -->
       [<a href="https://ignoww.github.io/ZOODiP_project">project</a>] 
-<!--       [<a href="https://github.com/ignoww/KLAP">code</a>] -->
+      [<a href="https://github.com/ignoww/ZOODiP">code</a>]
     </p>
     <p style="font-size: 13px;">
       Hoigi Seo*, <b style="color: blue;">Wongi Jeong*</b>, Kyungryeol Lee, Se Young Chun (*co-first)
