--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
     <p style="font-size: 13px;">
       <b>[CVPR25]</b> Efficient Personalization of Quantized Diffusion Model without Backpropagation
 <!--       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>]  -->
-<!--       [<a href="https://arxiv.org/abs/2307.10667">arXiv</a>]  -->
+      [<a href="https://arxiv.org/abs/2503.14868">arXiv</a>] 
       [<a href="https://ignoww.github.io/ZOODiP_project">project</a>] 
       [<a href="https://github.com/ignoww/ZOODiP">code</a>]
     </p>
