--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
   </div>
   <div style="flex: 1; padding: 10px;">
     <p style="font-size: 13px;">
-      <b>arXiv</b> Skrr: Skip and Re-use Text Encoder Layers for Memory Efficient Text-to-Image Generation
+      <b style="color: red;">ICML 2025</b> Skrr: Skip and Re-use Text Encoder Layers for Memory Efficient Text-to-Image Generation
 <!--       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>]  -->
       [<a href="https://arxiv.org/abs/2502.08690">arXiv</a>] 
 <!--       [<a href="https://ignoww.github.io/KLAP_project">project</a>]  -->
@@ -47,7 +47,7 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
   </div>
   <div style="flex: 1; padding: 10px;">
     <p style="font-size: 13px;">
-      <b style="color: red;">CVPR25</b> Efficient Personalization of Quantized Diffusion Model without Backpropagation
+      <b style="color: red;">CVPR 2025</b> Efficient Personalization of Quantized Diffusion Model without Backpropagation
 <!--       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>]  -->
       [<a href="https://arxiv.org/abs/2503.14868">arXiv</a>] 
       [<a href="https://ignoww.github.io/ZOODiP_project">project</a>] 
@@ -65,7 +65,7 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
   </div>
   <div style="flex: 1; padding: 10px;">
     <p style="font-size: 13px;">
-      <b style="color: red;">ISMRM25 (Oral)</b> Harmonization for a black-box deep learning model
+      <b style="color: red;">ISMRM 2025 (Oral)</b> Harmonization for a black-box deep learning model
     </p>
     <p style="font-size: 13px;">
       Minjun Kim, Hwihun Jeong, Hoigi Seo, <b style="color: blue;">Wongi Jeong</b>, Juhyung Park, Se Young Chun, Jongho Lee
@@ -83,7 +83,7 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
   </div>
   <div style="flex: 1; padding: 10px;">
     <p style="font-size: 13px;">
-      <b style="color: red;">ICCV23</b> Efficient Unified Demosaicing for Bayer and Non-Bayer Patterned Image Sensors
+      <b style="color: red;">ICCV 2023</b> Efficient Unified Demosaicing for Bayer and Non-Bayer Patterned Image Sensors
       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>] 
       [<a href="https://arxiv.org/abs/2307.10667">arXiv</a>] 
       [<a href="https://ignoww.github.io/KLAP_project">project</a>] 
@@ -103,7 +103,7 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
   <!-- text -->
   <div style="flex: 1; padding: 10px;">
     <p style="font-size: 13px;">
-      <b style="color: red;">ICCVW23 (Oral)</b> Fully Quantized Always-on Face Detector Considering Mobile Image Sensors
+      <b style="color: red;">ICCVW 2023 (Oral)</b> Fully Quantized Always-on Face Detector Considering Mobile Image Sensors
       [<a href="https://arxiv.org/abs/2311.01001">arXiv</a>]
     </p>
     <p style="font-size: 13px;">
