--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@ I earned my B.S degree in electrical and computer engineering (ECE) from Seoul N
 </p>
 
 <h2>Research Interests</h2>
-<p style="font-size: 13px;">My research interests broadly lie in <b>"efficient"</b> AI. I focus on making AI resource-efficient, computation-efficient, and model size-efficient in all aspects.
-  I am interested in both Natural Language Processing (NLP) and Computer Vision (CV), but my current focus is on <b>CV</b> tasks. Specifically, my work explores the following areas:</p>
+<p style="font-size: 13px;">My research interests broadly lie in <b>"efficient"</b> AI. I aim to make AI systems resource-, computation-, and parameter-efficient across all stages of development and deployment.
+While I am interested in both Natural Language Processing (NLP) and Computer Vision (CV), my current focus is on CV tasks. Specifically, my research explores, but is not limited to, the following areas:</p>
 <ul style="margin: 0; font-size: 13px; line-height: 1.5;">
-  <li>Efficient AI</li>
-  <li>Model Compression</li>
-  <li>Quantization & Pruning</li>
+  <li>Efficient Deep Learning</li>
+  <li>Model Compression Techniques</li>
+  <li>Quantization and Pruning</li>
 </ul>
-<p style="font-size: 13px;">but not limited to.</p>
 
 <h2>Researches</h2>
 <div style="font-size: 15px;">
