--- a/index.html
+++ b/index.html
@@ -24,6 +24,25 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
 </div>
 <div style="display: flex; align-items: center; margin-bottom: 20px;">
   <div style="flex: 0 0 25%; padding: 10px;">
+    <img src="assets/Comel.png" alt="ICCV25 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
+  </div>
+  <div style="flex: 1; padding: 10px;">
+    <p style="font-size: 13px;">
+      <b style="color: red;">ICCV 2025</b> Continual Multiple Instance Learning with Enhanced Localization for Histopathological Whole Slide Image Analysis
+<!--       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>]  -->
+<!--       [<a href="https://arxiv.org/abs/2502.08690">arXiv</a>]  -->
+<!--       [<a href="https://ignoww.github.io/KLAP_project">project</a>]  -->
+<!--       [<a href="https://github.com/ignoww/KLAP">code</a>] -->
+    </p>
+    <p style="font-size: 13px;">
+      Byung Hyun Lee, <b style="color: blue;">Wongi Jeong</b>, Woojae Han, Kyoungbun Lee, Se Young Chun
+    </p>
+  </div>
+</div>
+
+</div>
+<div style="display: flex; align-items: center; margin-bottom: 20px;">
+  <div style="flex: 0 0 25%; padding: 10px;">
     <img src="assets/Skrr.png" alt="ICML25 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
   </div>
   <div style="flex: 1; padding: 10px;">
@@ -47,7 +66,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
   <div style="flex: 1; padding: 10px;">
     <p style="font-size: 13px;">
       <b style="color: red;">CVPR 2025</b> Efficient Personalization of Quantized Diffusion Model without Backpropagation
-<!--       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>]  -->
+      [<a href="https://openaccess.thecvf.com/content/CVPR2025/html/Seo_Efficient_Personalization_of_Quantized_Diffusion_Model_without_Backpropagation_CVPR_2025_paper.html">paper</a>] 
       [<a href="https://arxiv.org/abs/2503.14868">arXiv</a>] 
       [<a href="https://ignoww.github.io/ZOODiP_project">project</a>] 
       [<a href="https://github.com/ignoww/ZOODiP">code</a>]
