--- a/index.html
+++ b/index.html
@@ -21,6 +21,26 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
 <h2>Researches</h2>
 <div style="font-size: 15px;">
   <b>2025</b>
+  
+</div>
+<div style="display: flex; align-items: center; margin-bottom: 20px;">
+  <div style="flex: 0 0 25%; padding: 10px;">
+    <img src="assets/RALU.png" alt="ICCV25 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
+  </div>
+  <div style="flex: 1; padding: 10px;">
+    <p style="font-size: 13px;">
+      <b style="color: red;">Under-Review</b> Upsample What Matters: Region-Adaptive Latent Sampling for Accelerated Diffusion Transformers
+<!--       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>]  -->
+<!--       [<a href="https://arxiv.org/abs/2502.08690">arXiv</a>]  -->
+<!--       [<a href="https://ignoww.github.io/KLAP_project">project</a>]  -->
+<!--       [<a href="https://github.com/ignoww/KLAP">code</a>] -->
+    </p>
+    <p style="font-size: 13px;">
+      <b style="color: blue;">Wongi Jeong*</b>, Kyungryeol Lee*, Hoigi Seo, Se Young Chun
+    </p>
+  </div>
+</div>
+
 </div>
 <div style="display: flex; align-items: center; margin-bottom: 20px;">
   <div style="flex: 0 0 25%; padding: 10px;">
