--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
     <p style="font-size: 13px;">
       <b style="color: red;">Under-Review</b> Upsample What Matters: Region-Adaptive Latent Sampling for Accelerated Diffusion Transformers
 <!--       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>]  -->
-<!--       [<a href="https://arxiv.org/abs/2502.08690">arXiv</a>]  -->
+      [<a href="https://arxiv.org/abs/2507.08422">arXiv</a>] 
 <!--       [<a href="https://ignoww.github.io/KLAP_project">project</a>]  -->
 <!--       [<a href="https://github.com/ignoww/KLAP">code</a>] -->
     </p>
@@ -50,7 +50,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
     <p style="font-size: 13px;">
       <b style="color: red;">ICCV 2025</b> Continual Multiple Instance Learning with Enhanced Localization for Histopathological Whole Slide Image Analysis
 <!--       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>]  -->
-<!--       [<a href="https://arxiv.org/abs/2502.08690">arXiv</a>]  -->
+      [<a href="https://arxiv.org/abs/2507.02395">arXiv</a>] 
 <!--       [<a href="https://ignoww.github.io/KLAP_project">project</a>]  -->
 <!--       [<a href="https://github.com/ignoww/KLAP">code</a>] -->
     </p>
