--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
   </div>
   <div style="flex: 1; padding: 10px;">
     <p style="font-size: 13px;">
-      <b style="color: red;">Under-Review</b> Upsample What Matters: Region-Adaptive Latent Sampling for Accelerated Diffusion Transformers
+      Upsample What Matters: Region-Adaptive Latent Sampling for Accelerated Diffusion Transformers
 <!--       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>]  -->
       [<a href="https://arxiv.org/abs/2507.08422">arXiv</a>] 
 <!--       [<a href="https://ignoww.github.io/KLAP_project">project</a>]  -->
 <!--       [<a href="https://github.com/ignoww/KLAP">code</a>] -->
+    </p>
+    <p>
+      <b>Under-Review</b>
     </p>
     <p style="font-size: 13px;">
       <b style="color: blue;">Wongi Jeong*</b>, Kyungryeol Lee*, Hoigi Seo, Se Young Chun
