--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
 <!--       [<a href="https://ignoww.github.io/KLAP_project">project</a>]  -->
 <!--       [<a href="https://github.com/ignoww/KLAP">code</a>] -->
     </p>
-    <p>
+    <p style="font-size: 13px;">
       <b>Under-Review</b>
     </p>
     <p style="font-size: 13px;">
