--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
     <img src="assets/RALU.png" alt="ICCV25 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
   </div>
   <div style="flex: 1; padding: 10px;">
-    <p style="font-size: 13px;">
+    <p style="font-size: 13px; line-height: 1.4; margin: 0;"">
       Upsample What Matters: Region-Adaptive Latent Sampling for Accelerated Diffusion Transformers
 <!--       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>]  -->
       [<a href="https://arxiv.org/abs/2507.08422">arXiv</a>] 
