--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
     <img src="assets/RALU.png" alt="ICCV25 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
   </div>
   <div style="flex: 1; padding: 10px;">
-    <p style="font-size: 13px; line-height: 1.4; margin: 0;"">
+    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       Upsample What Matters: Region-Adaptive Latent Sampling for Accelerated Diffusion Transformers
 <!--       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>]  -->
       [<a href="https://arxiv.org/abs/2507.08422">arXiv</a>] 
 <!--       [<a href="https://ignoww.github.io/KLAP_project">project</a>]  -->
 <!--       [<a href="https://github.com/ignoww/KLAP">code</a>] -->
     </p>
-    <p style="font-size: 13px; line-height: 1.4; margin: 0;"">
+    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       <b>Under-Review</b>
     </p>
-    <p style="font-size: 13px;">
+    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       <b style="color: blue;">Wongi Jeong*</b>, Kyungryeol Lee*, Hoigi Seo, Se Young Chun
     </p>
   </div>
@@ -49,14 +49,17 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
     <img src="assets/Comel.png" alt="ICCV25 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
   </div>
   <div style="flex: 1; padding: 10px;">
-    <p style="font-size: 13px;">
-      <b style="color: red;">ICCV 2025</b> Continual Multiple Instance Learning with Enhanced Localization for Histopathological Whole Slide Image Analysis
+    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
+      Continual Multiple Instance Learning with Enhanced Localization for Histopathological Whole Slide Image Analysis
 <!--       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>]  -->
       [<a href="https://arxiv.org/abs/2507.02395">arXiv</a>] 
 <!--       [<a href="https://ignoww.github.io/KLAP_project">project</a>]  -->
 <!--       [<a href="https://github.com/ignoww/KLAP">code</a>] -->
     </p>
-    <p style="font-size: 13px;">
+    <p>
+      <b>ICCV 2025</b> 
+    </p>
+    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       Byung Hyun Lee, <b style="color: blue;">Wongi Jeong</b>, Woojae Han, Kyoungbun Lee, Se Young Chun
     </p>
   </div>
@@ -67,14 +70,14 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
     <img src="assets/Skrr.png" alt="ICML25 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
   </div>
   <div style="flex: 1; padding: 10px;">
-    <p style="font-size: 13px;">
+    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       <b style="color: red;">ICML 2025</b> Skrr: Skip and Re-use Text Encoder Layers for Memory Efficient Text-to-Image Generation
 <!--       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>]  -->
       [<a href="https://arxiv.org/abs/2502.08690">arXiv</a>] 
 <!--       [<a href="https://ignoww.github.io/KLAP_project">project</a>]  -->
 <!--       [<a href="https://github.com/ignoww/KLAP">code</a>] -->
     </p>
-    <p style="font-size: 13px;">
+    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       Hoigi Seo*, <b style="color: blue;">Wongi Jeong*</b>, Jae-sun Seo, Se Young Chun (*co-first)
     </p>
   </div>
@@ -85,14 +88,17 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
     <img src="assets/ZOODiP.png" alt="CVPR25 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
   </div>
   <div style="flex: 1; padding: 10px;">
-    <p style="font-size: 13px;">
-      <b style="color: red;">CVPR 2025</b> Efficient Personalization of Quantized Diffusion Model without Backpropagation
+    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
+      Efficient Personalization of Quantized Diffusion Model without Backpropagation
+    </p>
+    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
+      <b style="color: red;">CVPR 2025</b>
       [<a href="https://openaccess.thecvf.com/content/CVPR2025/html/Seo_Efficient_Personalization_of_Quantized_Diffusion_Model_without_Backpropagation_CVPR_2025_paper.html">paper</a>] 
       [<a href="https://arxiv.org/abs/2503.14868">arXiv</a>] 
       [<a href="https://ignoww.github.io/ZOODiP_project">project</a>] 
       [<a href="https://github.com/ignoww/ZOODiP">code</a>]
     </p>
-    <p style="font-size: 13px;">
+    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       Hoigi Seo*, <b style="color: blue;">Wongi Jeong*</b>, Kyungryeol Lee, Se Young Chun (*co-first)
     </p>
   </div>
@@ -103,10 +109,10 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
     <img src="assets/ISMRM25.png" alt="ISMRM25 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
   </div>
   <div style="flex: 1; padding: 10px;">
-    <p style="font-size: 13px;">
+    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       <b style="color: red;">ISMRM 2025 (Oral)</b> Harmonization for a black-box deep learning model
     </p>
-    <p style="font-size: 13px;">
+    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       Minjun Kim, Hwihun Jeong, Hoigi Seo, <b style="color: blue;">Wongi Jeong</b>, Juhyung Park, Se Young Chun, Jongho Lee
     </p>
   </div>
