--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
       <b>Under-Review</b>
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
-      <b style="color: blue;">Wongi Jeong*</b>, Kyungryeol Lee*, Hoigi Seo, Se Young Chun
+      <b>Wongi Jeong*</b>, Kyungryeol Lee*, Hoigi Seo, Se Young Chun
     </p>
   </div>
 </div>
@@ -56,11 +56,11 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
 <!--       [<a href="https://ignoww.github.io/KLAP_project">project</a>]  -->
 <!--       [<a href="https://github.com/ignoww/KLAP">code</a>] -->
     </p>
-    <p>
+    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       <b>ICCV 2025</b> 
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
-      Byung Hyun Lee, <b style="color: blue;">Wongi Jeong</b>, Woojae Han, Kyoungbun Lee, Se Young Chun
+      Byung Hyun Lee, <b>Wongi Jeong</b>, Woojae Han, Kyoungbun Lee, Se Young Chun
     </p>
   </div>
 </div>
@@ -71,14 +71,17 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
   </div>
   <div style="flex: 1; padding: 10px;">
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
-      <b style="color: red;">ICML 2025</b> Skrr: Skip and Re-use Text Encoder Layers for Memory Efficient Text-to-Image Generation
+      Skrr: Skip and Re-use Text Encoder Layers for Memory Efficient Text-to-Image Generation
 <!--       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>]  -->
       [<a href="https://arxiv.org/abs/2502.08690">arXiv</a>] 
 <!--       [<a href="https://ignoww.github.io/KLAP_project">project</a>]  -->
 <!--       [<a href="https://github.com/ignoww/KLAP">code</a>] -->
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
-      Hoigi Seo*, <b style="color: blue;">Wongi Jeong*</b>, Jae-sun Seo, Se Young Chun (*co-first)
+      <b style="color: red;">ICML 2025</b> 
+    </p>
+    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
+      Hoigi Seo*, <b>Wongi Jeong*</b>, Jae-sun Seo, Se Young Chun (*co-first)
     </p>
   </div>
 </div>
@@ -90,13 +93,13 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
   <div style="flex: 1; padding: 10px;">
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       Efficient Personalization of Quantized Diffusion Model without Backpropagation
-    </p>
-    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
-      <b style="color: red;">CVPR 2025</b>
       [<a href="https://openaccess.thecvf.com/content/CVPR2025/html/Seo_Efficient_Personalization_of_Quantized_Diffusion_Model_without_Backpropagation_CVPR_2025_paper.html">paper</a>] 
       [<a href="https://arxiv.org/abs/2503.14868">arXiv</a>] 
       [<a href="https://ignoww.github.io/ZOODiP_project">project</a>] 
       [<a href="https://github.com/ignoww/ZOODiP">code</a>]
+    </p>
+    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
+      <b>CVPR 2025</b>
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       Hoigi Seo*, <b style="color: blue;">Wongi Jeong*</b>, Kyungryeol Lee, Se Young Chun (*co-first)
